Port NeoForge 26.2 stubs to live SubmitNodeCollector rendering.
Replace placeholder client/entity/datagen paths with extract-submit adapters, restore BER and level-effect draw, and drop obsolete MSDF/JEI/IMC shells so :platform:build succeeds.

Co-authored-by: Cursor <cursoragent@cursor.com>